components.css
/* ... */
fig-tabs,
.tabs {
  display: flex;
  gap: var(--spacer-2);
}

fig-tab-content,
.fig-tab-content {
  display: none;
}

/* Avatar */
fig-avatar,
.fig-avatar {
  contain: layout paint;
  --size: 1.5rem;
  width: var(--size);
  display: inline-grid;
  place-items: center;
  height: var(--size);
  border-radius: 100%;
  border: 0;
  background: var(--figma-color-bg-brand);
  overflow: hidden;
  color: var(--figma-color-icon-onbrand);

  img {
    width: var(--size);
    height: var(--size);
    position: absolute;
    border-radius: 100%;
    box-shadow: inset 0 0 0 1px var(--figma-color-bordertranslucent);
    &:not([src]) {
      background: var(--checkerboard);
    }
  }
  &[borderless] img {
    box-shadow: none;
  }

  &:has(img[src]) {
    background: none;
  }
  &::after {
    content: attr(initials);
  }
  &[size="large"] {
    --size: 3rem;
  }
}

/* Color input */
input[type="color"] {
  width: 0.875rem;
  height: 0.875rem;
  -webkit-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  margin: 0;
  background: none;
  padding: 0.3125rem;
  flex-shrink: 0;
  box-sizing: content-box;
  border-radius: var(--radius-medium);
  background-color: var(--figma-color-bg-secondary);
  display: inline-grid;

  &:focus {
    box-shadow: inset 0 0 0 1px var(--figma-color-border-selected);
    outline: 0;
  }

  &::-webkit-color-swatch-wrapper {
    padding: 0;
    border: 0;
    color-scheme: inherit;
    appearance: none;
    border-radius: 0.125rem;
    background: var(--checkerboard);
    overflow: hidden;
    grid-area: 1/1;
    color-scheme: inherit;
    outline: 0;
  }

  &::-webkit-color-swatch {
    padding: 0;
    border: 0;
    color-scheme: inherit;
    box-shadow: inset 0 0 0 1px var(--figma-color-bordertranslucent);
    color-scheme: inherit;
    border-radius: 0.125rem;
    mask-image: linear-gradient(
      to right,
      black 0%,
      black 50%,
      rgba(0, 0, 0, var(--alpha)) 50%
    );
  }
}

input[type="color"] {
  &::-moz-color-swatch {
    color-scheme: inherit;
    border-radius: 0.125rem;
    padding: 0;
    border: 0;
    appearance: none;
    mask-image: linear-gradient(
      to right,
      black 0%,
      black 50%,
      rgba(0, 0, 0, var(--alpha)) 50%
    );
    box-shadow: inset 0 0 0 1px var(--figma-color-bordertranslucent);
  }
}

fig-chit {
  --size: 1.5rem;
  --padding: 5px;
  --width: var(--size);
  --height: var(--size);
  --border-radius: var(--radius-medium);
  --chit-background: linear-gradient(#d9d9d9, #d9d9d9);
  --chit-bg-size: cover;
  --chit-bg-position: center;
  --selected: 0;
  --alpha: 1;

  display: inline-grid;
  width: var(--size);
  height: var(--size);
  border-radius: var(--border-radius);
  background-color: var(--figma-color-bg-secondary);
  box-shadow: inset 0 0 0 calc(var(--selected) * 1px)
    var(--figma-color-border-selected);

  &::before,
  &::after,
  div,
  input {
    grid-area: 1/1;
  }
  & > div {
    background: var(--checkerboard-small);
    border-radius: var(--border-radius);
  }

  /* Selection ring */
  &[selected]:not([selected="false"]) {
    --selected: 1;
    background-color: transparent;
  }

  &[size="medium"],
  &[size="large"] {
    --padding: 0px;
    &[selected]:not([selected="false"]) {
      --padding: 3px;
    }
    & > div {
      background: var(--checkerboard);
    }
  }

  &[size="medium"] {
    --size: 1.5rem;
    --padding: 0px;
  }

  &[size="large"] {
    --size: 2rem;
    --padding: 0px;
  }

  &[disabled]:not([disabled="false"]) {
    pointer-events: none;
  }

  &::before,
  &::after,
  & > div {
    content: "";
    width: calc(var(--width) - var(--padding) * 2);
    height: calc(var(--height) - var(--padding) * 2);
    border-radius: calc(var(--border-radius) - (var(--padding) / 2));
    grid-area: 1/1;
    place-self: center;
    pointer-events: none;
  }
  &::after {
    box-shadow: inset 0 0 0 1px var(--figma-color-bordertranslucent);
    z-index: 1;
  }
  &::before {
    content: "";
    background: var(--chit-background);
    background-size: var(--chit-bg-size);
    background-position: var(--chit-bg-position);
    background-repeat: no-repeat;
    border-radius: calc(var(--border-radius) - (var(--padding) / 2));
    mask-image: linear-gradient(
      to right,
      black 0%,
      black 50%,
      rgba(0, 0, 0, var(--alpha)) 50%
    );
    grid-area: 1/1;
    place-self: center;
  }
  &[size="medium"]::before,
  &[size="large"]::before {
    border-radius: calc(var(--border-radius) - var(--padding));
  }
  input[type="color"] {
    background: none;
    width: var(--width);
    height: var(--height);
    grid-area: 1/1;
    place-self: center;
    box-sizing: border-box;
    opacity: 0;
  }

  /* Gradient/Image types - inset thumbnail with hidden input */
  &[data-type="gradient"],
  &[data-type="image"] {
    background-color: var(--figma-color-bg-secondary);
    input[type="color"] {
      display: none;
    }
  }
}

/* Fig Image */
fig-truncate {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  min-width: 0;
  max-width: 100%;
  vertical-align: bottom;

  &[position="left"] {
    display: block;
    direction: rtl;
    text-align: left;
  }

  &[position="middle"] {
    display: inline-flex;
    text-overflow: clip;
    gap: 0;

    & > .start,
    & > .end {
      flex: 0 1 auto;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      min-width: 0;
    }

    & > .end {
      direction: rtl; /* technique #2 on right half */
      text-align: left;
      text-overflow: ellipsis;
    }
    &[tail] {
      & > .end {
        direction: ltr;
        text-align: right;
        flex-shrink: 0;
      }
    }
  }
}
/* ... */

